feat : updated CNN Implementation (replication of PyTorch official codes)

--- a/Research Paper Implementation/005. Convolutional Neural Network/Convolutional Neural Network.ipynb
+++ b/Research Paper Implementation/005. Convolutional Neural Network/Convolutional Neural Network.ipynb
@@ -669,11 +669,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "1aaf0bd1-b506-43c8-a9d3-8ee68a09b0d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b69e0651-c8ce-4a25-87fa-eace1ba609ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar, Union, Tuple, Optional, List\n",
+    "import torch\n",
+    "from torch import Tensor\n",
+    "from torch.nn.modules import Module\n",
+    "from torch.nn.parameter import Parameter, UninitializedParameter\n",
+    "from torch.nn import functional as F\n",
+    "from torch.nn.modules.utils import _single, _pair, _triple, _reverse_repeat_tuple\n",
+    "T = TypeVar('T')\n",
+    "_scalar_or_tuple_2_t = Union[T, Tuple[T, T]]\n",
+    "_size_2_t = _scalar_or_tuple_2_t[int]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f220f0c7-9763-4a3e-8af6-02d11265a11a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class _ConvNd(Module):\n",
+    "    __constants__ = ['stride', 'padding', 'dilation', 'groups',\n",
+    "                    'padding_mode', 'output_padding', 'in_channels',\n",
+    "                    'out_channels', 'kernel_size']\n",
+    "    __annotations__ = {'bias':Optional[torch.Tensor]}\n",
+    "\n",
+    "    def _conv_forward(self, input:Tensor, weight:Tensor, bias:Optional[Tensor]) -> Tensor:\n",
+    "        ...\n",
+    "    in_channels: int\n",
+    "    _reversed_padding_repeated_twice: List[int]\n",
+    "    out_channels: int\n",
+    "    kernel_size: Tuple[int, ...]\n",
+    "    stride:Tuple\n",
+    "    padding: Union[str, Tuple[int, ...]]\n",
+    "    dilation: Tuple[int, ...]\n",
+    "    transposed: bool\n",
+    "    output_padding: Tuple[int, ...]\n",
+    "    groups: int\n",
+    "    padding_mode: str\n",
+    "    weight: Tensor\n",
+    "    bias: Optional[Tensor]\n",
+    "\n",
+    "    def __init__(self, \n",
+    "                 in_channels:int,\n",
+    "                 out_channels: int,\n",
+    "                 kernel_size: Tuple[int, ...],\n",
+    "                 stride: Tuple[int, ...],\n",
+    "                 padding: Tuple[int, ...],\n",
+    "                 dilation: Tuple[int, ...],\n",
+    "                 transposed: bool,\n",
+    "                 output_padding: Tuple[int, ...],\n",
+    "                 groups: int,\n",
+    "                 bias: bool,\n",
+    "                 padding_mode: str,\n",
+    "                 device=None,\n",
+    "                 dtype=None\n",
+    "                ) -> None:\n",
+    "        factory_kwargs = {'device': device, 'dtype':dtype}\n",
+    "        super().__init__()\n",
+    "        if groups <= 0:\n",
+    "            raise ValueError('groups must be a positive integer')\n",
+    "        if in_channels % groups != 0:\n",
+    "            raise ValueError('in_channels must be divisible by groups')\n",
+    "        if out_channels % groups != 0:\n",
+    "            raise ValueError('out_channels must be divisible by groups')\n",
+    "        valid_padding_strings = {'same', 'valid'}\n",
+    "        if isinstance(padding, str):\n",
+    "            if padding not in valid_padding_strings:\n",
+    "                raise ValueError(f'Invalid padding string {padding!r}, should be one of {valid_padding_strings}')\n",
+    "            if padding == 'same' and any(s != 1 for s in stride):\n",
+    "                raise ValueError('padding=\"same\" is not supported for strided convolutions')\n",
+    "\n",
+    "        valid_padding_modes = {'zeros', 'reflect', 'replicate', 'circular'}\n",
+    "        if padding_mode not in valid_padding_modes:\n",
+    "            raise ValueError(f'padding_mode must be one of {valid_padding_modes}, but got padding_mode=\"{padding_mode}\"')\n",
+    "        \n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.stride = stride\n",
+    "        self.padding = padding\n",
+    "        self.dilation = dilation\n",
+    "        self.transposed = transposed\n",
+    "        self.output_padding = output_padding\n",
+    "        self.groups = groups\n",
+    "        self.padding_mode = padding_mode\n",
+    "\n",
+    "        if isinstance(self.padding, str):\n",
+    "            self._reversed_padding_repeated_twice = [0, 0] * len(kernel_size)\n",
+    "            if padding == 'same':\n",
+    "                for d, k, i in zip(dilation, kernel_size, range(len(kernel_size) -1, -1, -1)):\n",
+    "                    total_padding = d * (k-1)\n",
+    "                    left_pad = total_padding // 2\n",
+    "                    self._reversed_padding_repeated_twice[2 * i] = left_pad\n",
+    "                    self._reversed_padding_repeated_twice[2 * i + 1] = (total_padding - left_pad)\n",
+    "        else:\n",
+    "            self._reversed_padding_repeated_twice = _reverse_repeat_tuple(self.padding, 2)\n",
+    "\n",
+    "        if transposed:\n",
+    "            self.weight = Parameter(torch.empty(\n",
+    "                (in_channels, out_channels // groups, *kernel_size), **factory_kwargs))\n",
+    "        else:\n",
+    "            self.weight = Parameter(torch.empty(\n",
+    "                (out_channels, in_channels // groups, *kernel_size), **factory_kwargs))\n",
+    "        if bias:\n",
+    "            self.bias = Parameter(torch.empty(out_channels, **factory_kwargs))\n",
+    "        else:\n",
+    "            self.register_parameter('bias', None)\n",
+    "        self.reset_parameters()\n",
+    "    \n",
+    "    def reset_parameters(self) -> None:\n",
+    "        init.kaiming_uniform_(self.weight, a= math.sqrt(5))\n",
+    "        if self.bias is not None:\n",
+    "            fan_in, _ = init._calculate_fan_in_and_fan_out(self.weight)\n",
+    "            if fan_in != 0:\n",
+    "                bound = 1 / math.sqrt(fan_in)\n",
+    "                init.uniform_(self.bias, -bound, bound)\n",
+    "                \n",
+    "    def extra_repr(self):\n",
+    "        s = ('{in_channels}, {out_channels}, kernel_size={kernel_size}' ', stride={stride}')\n",
+    "        if self.padding != (0,) * len(self.padding):\n",
+    "            s+= ', padding={padding}'\n",
+    "        if self.dilation != (1,) * len(self.dilation):\n",
+    "            s+= ', dilation={dilation}'\n",
+    "        if self.output_padding != (0,) * len(self.output_padding):\n",
+    "            s+= ', output_padding={output_padding}'\n",
+    "        if self.groups != 1:\n",
+    "            s+= ', groups={groups}'\n",
+    "        if self.bias is None:\n",
+    "            s += ', bias=False'\n",
+    "        if self.padding_mode != 'zeros':\n",
+    "            s+= ', padding_mode={padding_mode}'\n",
+    "        return s.format(**self.__dict__)\n",
+    "        \n",
+    "    def __setstate__(self, state):\n",
+    "        super().__setstate__(state)\n",
+    "        if not hasattr(self, 'padding_mode'):\n",
+    "            self.padding_mode = 'zeros'\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c80b84c1-d766-47b1-bf11-09e69e0ef3e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Conv2d:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_channels: int,\n",
+    "        out_channels: int,\n",
+    "        kernel_size: _size_2_t,\n",
+    "        stride: _size_2_t = 1,\n",
+    "        padding: Union[str, _size_2_t] = 0,\n",
+    "        dilation: _size_2_t = 1,\n",
+    "        groups: int = 1,\n",
+    "        bias: bool = True,\n",
+    "        padding_mode: str = 'zeros',  # TODO: refine this type\n",
+    "        device=None,\n",
+    "        dtype=None\n",
+    "    ) -> None:\n",
+    "        \n",
+    "        factory_kwargs = {'device': device, 'dtype': dtype}\n",
+    "        kernel_size_ = _pair(kernel_size)\n",
+    "        stride_ = _pair(stride)\n",
+    "        padding_ = padding if isinstance(padding, str) else _pair(padding)\n",
+    "        dilation_ = _pair(dilation)\n",
+    "        super().__init__(in_channels,\n",
+    "                         out_channels,\n",
+    "                         kernel_size_,\n",
+    "                         stride_,\n",
+    "                         padding_,\n",
+    "                         dilation_,\n",
+    "                         False,\n",
+    "                         _pair(0),\n",
+    "                         groups,\n",
+    "                         bias,\n",
+    "                         padding_mode,\n",
+    "                         **factory_kwargs)\n",
+    "    def _conv_forward(self, input: Tensor, weight: Tensor, bias: Optional[Tensor]):\n",
+    "        if self.padding_mode != 'zeros':\n",
+    "            return F.conv2d(F.pad(input, self._reversed_padding_repeated_twice, mode=self.padding_mode),\n",
+    "                            weight,\n",
+    "                            bias,\n",
+    "                            self.stride,\n",
+    "                            _pair(0),\n",
+    "                            self.dilation,\n",
+    "                            self.groups\n",
+    "                           )\n",
+    "            \n",
+    "        return F.conv2d(input,\n",
+    "                        weight,\n",
+    "                        bias,\n",
+    "                        self.stride,\n",
+    "                        self.padding,\n",
+    "                        self.dilation,\n",
+    "                        self.groups\n",
+    "                       )\n",
+    "\n",
+    "    def forward(self,\n",
+    "                input: Tensor\n",
+    "               ) -> Tensor:\n",
+    "        return self._conv_forward(input,\n",
+    "                                  self.weight,\n",
+    "                                  self.bias)\n",
+    "        \n",
+    "    def convolutional_layer(self):\n",
+    "\n",
+    "    def max_pooling_layer(self):\n",
+    "\n",
+    "    def avg_pooling_layer(self):\n",
+    "\n",
+    "    def fully_connected_layer(self):\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
